# GameAPI

./: GameAPI.cryproject  README.md
Assets/Levels/example/: example.cry  filelist.xml  level.pak
Assets/Levels/example/Layers/: main.lyr
Assets/Objects/Characters/SampleCharacter/: mcg_diff.dds  mcg_spec.dds
Assets/Textures/cubemaps/example/: environmentprobe1_cm.dds  environmentprobe1_cm_diff.dds
Assets/UI/: Login.bytes  Login@sprites.bytes  Register.bytes  Register@sprites.bytes
Code/: CMakeLists.txt  GameAPIBridge.cpp  GameAPIBridge.h  GamePlugin.cpp  GamePlugin.h  IGameAPI.cpp  StdAfx.h
Code/Actor/: ActorManager.cpp  ActorManager.h
Code/Components/Actor/: ActorComponent.cpp  ActorComponent.h
Code/Components/Item/: ItemComponent.cpp  ItemComponent.h  WeaponComponent.cpp  WeaponComponent.h
Code/Components/Properties/: Properties.h
Code/Help/: ToCSharp.cpp  ToCSharp.h
Code/Include/: IGameAPI.h  IMiscellaneous.h
Code/Include/Actor/: IActorManager.h
solutions/Game/: Game.cs  Game.csproj  GameAPIDLL.cs
solutions/Game/Event/: GameEvent.cs
solutions/Game/Framework/: BaseEvent.cs  BaseMediator.cs  BaseModule.cs  BaseView.cs
solutions/Game/Manager/: ModuleManager.cs  UIManager.cs
solutions/Game/Properties/: AssemblyInfo.cs
solutions/Game/System/: GameConfig.cs  GameManager.cs
solutions/Game/UI/TestProject/: testMediator.cs  testModel.cs  testModule.cs  testService.cs  testView.cs
solutions/Game/libs/: CryEngine.Core.dll.mdb
solutions/GameAPIBridge/: AssemblyInfo.cpp  GameAPIBridge.cpp  GameAPIBridge.h  GameAPIBridge.vcxproj  GameAPIBridge.vcxproj.filters
solutions/GameAPIBridge/Managers/: ActorManager.cpp  ActorManager.h  IManager.h
solutions/GameAPIBridge/x64/Debug/: .NETFramework,Version=v4.0.AssemblyAttributes.asm  GameAPIBridge.vcxprojResolveAssemblyReference.cache
solutions/GameAPIBridge/x64/Debug/GameAPIBridge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameAPIBridge.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
solutions/win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Code_uber.cpp  Components_uber.cpp  GameAPI.autogen.rc  GameAPI.sln  GameAPI.vcxproj  GameAPI.vcxproj.filters  GameLauncher.vcxproj  GameServer.vcxproj  GameServer.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Sandbox.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
solutions/win64/Debug/: GameAPI.exp  GameAPI.lib
solutions/win64/Game/: Game.cs  Game.csproj
solutions/win64/Game/GameAPI/: GameAPI.cs
solutions/win64/Game/Properties/: AssemblyInfo.cs
solutions/win64/x64/Debug/: GameAPIBridge.dll.metagen
user/shaders/: shadercachemisses.txt
user/shaders/cache/: globals.txt
user/shaders/cache/d3d11/cgcshaders/: deferredshading@tileddeferredshadingcs.fxcb
user/shaders/cache/d3d11/cgpshaders/: depthoffield@bokehblurps.fxcb  depthoffield@copydepthtoalphabiasednomaskps.fxcb  depthoffield@copydepthtoalphabiasedps.fxcb  depthoffield@copydepthtoalphanomaskps.fxcb  depthoffield@dofhiqualitynearfarsetupps.fxcb  depthoffield@dofhiqualityps.fxcb  depthoffield@dofoutoffocusps.fxcb  depthoffield@dofps.fxcb  depthoffield@dofstencilprepassps.fxcb  depthoffield@faroutfocusps.fxcb  depthoffield@infocusps.fxcb  depthoffield@nearoutfocusps.fxcb  dxtcompress@dxtcompressps.fxcb  (+15 more)
user/testresults/: bp_boot.xml  bp_level.xml
(+16 files in other folders)
